# ExamenRedHatDataGrid

./: .gitignore  Cargo.toml  README.md  api.cmd  compose.yaml  redHatDataGridVideo.sql  start.cmd
GUI/: film_list.html  film_list.js  insert_film.html  insert_film.js  update_film.html  update_film.js
GUI/public/: menu.css
database/: 01_config.sql  02_tables.sql  03_tables_logs.sql  04_data.sql  05_data_logs.sql  06_triggers.sql  07_procedures.sql  08_views.sql  09_functions.sql  10_foreign_keys.sql  11_users.sql
nginx/: nginx.conf
nginx/ssl/: localhost.crt  localhost.key
services/films/: Cargo.toml
services/films/src/: actions.rs  main.rs  models.rs  routes.rs
services/lib/: Cargo.toml
services/lib/src/: lib.rs
